[package]
authors = ["jD91mZM2 <me@krake.one>"]
name = "client-gtk"
version = "0.1.0"
[dependencies]
chrono = "0.4.0"
failure = "0.1.1"
gdk = "0.7.0"
notify-rust = "3.4.2"
pango = "0.3.0"
rusqlite = "0.13.0"
synac = "0.6.1"
xdg = "2.1.0"

[dependencies.gtk]
features = ["v3_22"]
version = "0.3.0"

[dependencies.pulldown-cmark]
path = "pulldown-cmark-patch"
